--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
     - uses: actions/first-interaction@v1
       with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        repo-token: ${{ secrets.GREETING_TOKEN }}
         issue-message: 'Hey there! 👋<br>Thanks for raising an issue! It was your first issue here, Hope you will keep raising more issues ;)'
         pr-message: 'Hey there! 👋<br>Thanks for making a PR! It was your first pull request here, Hope you will keep raising more PRs ;)'
