--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-ga-middleware": "^0.1.6",
     "handlebars": "^4.7.7",
-    "hbs": "^4.1.2"
+    "hbs": "^4.1.2",
+    "universal-analytics": "^0.4.23"
   }
 }
