--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "url-shortener",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "Free URL shortener for myself",
   "main": "index.js",
   "repository": "https://github.com/ankityadavhere/url-shortener",
@@ -15,10 +15,8 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.7",
-    "hbs": "^4.1.2",
-    "universal-analytics": "^0.4.23"
+    "hbs": "^4.1.2"
   }
 }
