--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,8 +9,8 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GREETING_TOKEN }}
-        issue-message: 'Hey there! 👋<br>Thanks for raising an issue! It was your first issue here, Hope you will keep raising more issues ;)'
-        pr-message: 'Hey there! 👋<br>Thanks for making a PR! It was your first pull request here, Hope you will keep raising more PRs ;)'
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GREETING_TOKEN }}
+          issue-message: 'Hey! 👋<br>Thanks for raising the issue! It was your first issue here, Hope you will keep raising issues <3'
+          pr-message: 'Hey! 👋<br>Thanks for making this PR! It was your first pull request here, Hope you will keep raising more PRs <3'
